test/libsolidity/syntaxTests/storageLayoutSpecifier/layout_specified_by_type.sol
contract A layout at uint {}
// ----
// UnimplementedFeatureError 1834: (0-28): Code generation is not supported for contracts with specified storage layout base.
